--- a/sonus.html
+++ b/sonus.html
@@ -124,6 +124,7 @@
         <div class="col-md-12 text-block text-center">
           <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">BRIEFING</h3>
           <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Jam sessions are a nice social activities where people such as young adults do not only show their musical skills, but also produce music together and get a connected feeling with each other that can enhance the group dynamics. A music illiterate in the group however would feel left out in this scenario. That person could maybe only tap to the beat, or play the tambourine, also to mimic the beat, but that’s where it stops. The tambourine does not always fit the sound that the band is playing and it can quite a monotonous interaction with the instrument. To solve this problem we aim to design a personalised musical instrument to enable young adults who are music illiterates in friendly social gatherings to produce meaningful sounds in order to express themselves artistically.</p>
+        </div>
       </div>
     </section>
 
@@ -141,9 +142,12 @@
           <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/sonus/scheme.jpg" alt="System Diagram"/></div>
+              <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/sonus/scheme.jpg" alt="System Diagram"/></div>
+            </div>
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.5s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/sonus/joystick.jpg" alt="Joystick"/></div>
             </div>
           </div>
