--- a/corbion.html
+++ b/corbion.html
@@ -105,9 +105,88 @@
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
-                <p style="font-size: 16px">Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Multidisciplinary collaboration, Paper Prototyping, Personas, Presentation to the client, Online Survey, Think aloud user tests, User interviews</p>
+                <p style="font-size: 16px">Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Group session, Multidisciplinary collaboration, Paper Prototyping, Personas, Presentation to the client, Online Survey, Think aloud user tests, User interviews</p>
               </div>
             </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Briefing -->
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">BRIEFING</h2>
+            <img class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ABOUT THE CLIENT</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Corbion is the global market leader in lactic acid, lactic acid derivatives, and a leading company in emulsifiers, functional enzyme blends, minerals, vitamins and algae ingredients. Their factory in Gorinchem runs various process line 24/7. A central control room monitors all processes in that facility. As part of the "Control Room of the Future" Project, Corbion is addressing new features for its CR.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Prototype -->
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">CONTEXTUAL TASK ANALYSIS</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">UNDERSTANDING OPERATORS NEEDS</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
+          <div class="portfolio-single-content">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Prototype -->
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">COMMUNICATION & TASKLIST</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ENHANCING COMMUNICATION AND PLANNING FOR OPERATORS</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
+          <div class="portfolio-single-content">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Prototype -->
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head" >
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">NFC-BASED SCAN ROUND</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>
+        <div class="col-md-12 text-block text-center">
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">INTEGRATING TASKS</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
+          <div class="portfolio-single-content">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -214,7 +293,7 @@
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -224,7 +303,7 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -234,7 +313,7 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.5s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -244,7 +323,7 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.6s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -254,7 +333,7 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.7s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
