--- a/corbion.html
+++ b/corbion.html
@@ -81,7 +81,7 @@
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-flag1"></i>
                 <h4>Client & Place</h4>
-                <p style="font-size: 16px">Corbion<br>Netherlands</p>
+                <p style="font-size: 16px">Corbion & VHPHP<br>Netherlands</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
@@ -96,13 +96,13 @@
                 <p style="font-size: 16px">Cognitive Psychologist<br>Computer Scientist<br>Industrial Designer</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
                 <p style="font-size: 16px">Design a smart device that supports operators during their activities in a chemichal factory.</p>
               </div>
             </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
                 <p style="font-size: 16px">Axure prototyping, Benchmarking, Contextual inquiry, Design review, Design thinking, Expert interviews, Group session, Multidisciplinary collaboration, Paper Prototyping, Personas, Presentation to the client, Online Survey, Think aloud user tests, User interviews</p>
@@ -123,7 +123,9 @@
         </div>
         <div class="col-md-12 text-block text-center">
           <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ABOUT THE CLIENT</h3>
-          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Corbion is the global market leader in lactic acid, lactic acid derivatives, and a leading company in emulsifiers, functional enzyme blends, minerals, vitamins and algae ingredients. Their factory in Gorinchem runs various process line 24/7. A central control room monitors all processes in that facility. As part of the "Control Room of the Future" Project, Corbion is addressing new features for its CR.</p>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Corbion is the global market leader in lactic acid, lactic acid derivatives, and a leading company in emulsifiers, functional enzyme blends, minerals, vitamins and algae ingredients. Their factory in Gorinchem runs various process line simultaneously 24/7. A central control room displays processes status and variables from sensors readings. As part of the "Control Room of the Future" Project, Corbion is addressing new ideas to improve the efficiency and safety of the processes from their operators perspective.</p>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Panel and field operators can be assigned to one or more processes. Each operation has particular characteristics such as operation mode, localization, machinery, sensors, etc. Panel operator (PO) monitors the readings from sensors and observe processes status, while field operator (FO) performs check rounds, pick samples of batches, manual adjustments on machinery and inspect checkpoints for problems. POs are based at the central control room whereas FOs walk around the factory.</p>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">The interaction between operators is a crucial activity. They use radio communication to share: process status, parameters value, leakage notification, incoming tasks, and others. In conditions where communication fails, operators experience attention bottlenecks that could affect reactions to calls or delay a process. Therefore improving support to operators is critical to improving the conditions of their activities.</p>
         </div>
       </div>
     </section>
@@ -133,16 +135,20 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head" >
-            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">CONTEXTUAL TASK ANALYSIS</h2>
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">UNDERSTANDING OPERATORS NEEDS</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div class="col-md-12 text-block text-center">
-          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">UNDERSTANDING OPERATORS NEEDS</h3>
-          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">CONTEXTUAL TASK ANALYSIS, INTERVIEWS, GROUP SESSIONS, ONLINE SURVEY, IDEATION</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">During the project, my team performed weekly visits to the factory. We observed operators executing tasks during their work shift. Also, we conducted interviews, an online survey and a group session to discuss their priorities, tasks difficulties, and bottlenecks that could be improved. These activities allowed the prioritization of the design opportunities within the project scope.
+          </p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
+              <div class="row"><img src="assets/images/corbion/ideas.jpg" alt="System Diagram"/></div>
+            </div>
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/corbion/sketch.jpg" alt="System Diagram"/></div>
             </div>
           </div>
         </div>
@@ -160,108 +166,32 @@
         </div>
         <div class="col-md-12 text-block text-center">
           <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">ENHANCING COMMUNICATION AND PLANNING FOR OPERATORS</h3>
-          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
-          <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
-            </div>
-          </div>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">As one of the problems identified, the communication breakdown between operators happens on a daily base. Noise interference, no-signal areas or misplacement of the walkie-talkie were some of the reasons that lead to this issue. Besides that, field operators reported some problems with modifications in their plans during a shift. They usually plan their routes - across the entire facility - according to the tasks and checkpoints assigned to them. New incoming tasks cause route disruptions, increasing a task duration due to an additional walkthrough. Another situation where extra time occurs happens when field operators have to wait for panel operator updates - process status, sensor readings, time to pick a sample - to proceed with the remaining tasks. </p>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">We designed an application for a smartphone to support their communication and planning more efficiently. It provides an overview of activities, processes status, notifications and network communication.</p>
+          <iframe class="os-animation col-sm-12 text-center" data-os-animation="fadeIn" data-os-animation-delay="0.4s" style="padding-top: 2em;" width="600" height="700" src="https://player.vimeo.com/video/250430537" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
         </div>
       </div>
     </section>
 
     <!-- Prototype -->
-    <section class="section section-white">
+    <!--section class="section section-white">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head" >
-            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">NFC-BASED SCAN ROUND</h2>
+            <h2 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.1s" style="line-height: 1.05em;">INTEGRATING TASKS</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div class="col-md-12 text-block text-center">
-          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">INTEGRATING TASKS</h3>
-          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;"></p>
+          <h3 class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.2s">NFC-BASED SCAN ROUND</h3>
+          <p class="os-animation text-left" data-os-animation="fadeIn" data-os-animation-delay="0.3s" style="font-size: 1.4em; padding-top: 1.2em;">Dutch Government demands the control of chemical leakkages. Therefore, scanning rounds are conducted by field operators in the entire factory. Currently operators uses a scanning device that records the barcodes of checkpoints across the plant. At the end of the round, operators uploads the checkpoint list into a dockstation at the control room. If a checkpoint is missed, the operators has to return to that point for scanning. We designed an additional feature for our apps, that uses NFC tags instead of scanbars, allowing operators to haveg a overview of all checkpoints during the round. That way, operators will less likely miss checkpoints, saving time without extra walkthrough.</p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/sonus/proto.jpg" alt="System Diagram"/></div>
             </div>
+            
           </div>
         </div>
-      </div>
-    </section>
-
-    <!--section class="section section-white">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">BRIEFING</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
-          </div>
-        </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Eventix is an online e-ticket solution for event organizers all around the world. Their customers are festivals, theaters, business and sports organizers. One of their products is the desktop dashboard. The dashboard provides to organizers information about sales, insights from marketing, demographics about the audience, etc. These data are fundamental to support business decisions. Therefore, their customers should have a great experience while using this feature. Eventix asked my team to design a dashboard with a better experience for customers that would also reduce the need for supports during and after the sales stage.</p>
-          <iframe class="col-sm-12 text-center" style="padding-top: 2em;" width="600" height="700" src="https://www.youtube.com/embed/rS2n4u7SR1U" frameborder="0" allowfullscreen style="padding-bottom: 2em;"></iframe>
-      </div>
-    </section-->
-
-    <!--section class="section section-white">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">RESEARCH</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
-          </div>
-        </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.</p>
-          <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/eventix/persona.jpg" alt="Project Image"/></div>
-            </div>
-          </div>
-      </div>
-    </section>
-
-    <section class="section section-white">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">ALERT APPLET & NOTIFICATION FEED</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
-          </div>
-        </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
-          <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/eventix/scheme.jpg" alt="Project Image"/></div>
-            </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/eventix/wireframe1.jpg" alt="Project Image"/></div>
-            </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/eventix/newsfeed.jpg" alt="Project Image"/></div>
-            </div>
-          </div>
-      </div>
-    </section>
-
-    <section class="section section-white">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em; font-size:6em;">DESIGN OUTCOMES</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
-          </div>
-        </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">USER TEST OUTCOMES AND DESIGN RECEOMENDATIONS</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
-          <iframe class="col-sm-12" src="https://player.vimeo.com/video/244456470" width="600" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </section-->
 
