--- a/reach.html
+++ b/reach.html
@@ -122,8 +122,7 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors.
-           The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München.</p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors. The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München.</p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/lokaalplus.jpg" alt="Project Image"/></div>
@@ -144,7 +143,7 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/affinitydiagram.jpg" alt="Project Image"/></div>
@@ -163,7 +162,7 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/map.jpg" alt="Project Image"/></div>
@@ -186,7 +185,7 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/wireframe.jpg" alt="Project Image"/></div>
