--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
           <div class="row">
             <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-3 os-animation"> 
               <h4>APPROACHES</h4>
-              <p>Agile, Benchmarking, Design Thinking, Project Management, User-Centered Design, User & Business Requirement Elucidation.</p>
+              <p>Agile, Benchmarking, Design Thinking, Project Management, User-Centered Design, User & Business Requirement Elucidation</p>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-3 small-screen-margin-top os-animation">
               <h4>METHODS</h4>
-              <p>A/B Testing, Affinity Diagram, Brainstorming, Business Model Canvas, Contextual Task Analysis, Design Sprint, Heuristic Evaluation, Personas, Storyboarding, Surveys, Usability Testing, User Inteviews, Wireframing</p>
+              <p>A/B Testing, Affinity Diagram, Brainstorming, Business Model Canvas, Contextual Task Analysis, Design Sprint, Heuristic Evaluation, Personas, Storyboarding, Surveys, Usability Testing, User Interviews, Wireframing</p>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.6s" class="col-md-3 small-screen-margin-top os-animation">
               <h4>PROTOTYPE</h4>
-              <p>Electronics, Interaction Design, Microcontrollers, Paper Prototyping, Programming, Tangible Prototyping, UI Prototyping, Wizard of Oz.</p>
+              <p>Electronics, Interaction Design, Microcontrollers, Paper Prototyping, Programming, Tangible Prototyping, UI Prototyping, Wizard of Oz</p>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.9s" class="col-md-3 small-screen-margin-top os-animation">
               <h4>DATA</h4>
