--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
-              <span style="font-size: 1.1em;">UX DESIGN &amp; DEV</span>
+              <span style="font-size: 1.1em;">UX DESIGN &amp; RESEARCH</span>
               <h2 style="padding-top: 0.1em;">SKILLS</p></h2>
               <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
             </div>
