--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
               </li>
 
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
+              <!--li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
                 <div class="masonry-item background-color-4"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
@@ -171,9 +171,9 @@
                     </div>
                   </a>
                 </div>
-              </li>
+              </li-->
 
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
+              <!--li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
                 <div><img src="assets/images/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
@@ -183,7 +183,8 @@
                     </div>
                   </a>
                 </div>
-              </li>
+              </li-->
+              
             </ul>
           </div>
         </div>
