--- a/aac.html
+++ b/aac.html
@@ -57,7 +57,7 @@
             <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
             <li class="delay-5"><a href="sonus.html">Sonus</a></li>
             <li class="delay-6"><a href="aac.html">EMG-based AAC</a></li>
-            <li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+            <!--li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li-->
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
@@ -242,7 +242,7 @@
                 </a>
               </div>
             </li-->
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
+            <!--li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -251,7 +251,8 @@
                   </div>
                 </a>
               </div>
-            </li>
+            </li-->
+
           </ul>
         </div>
       </div>
