--- a/intel.html
+++ b/intel.html
@@ -55,7 +55,7 @@
             <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
             <li class="delay-5"><a href="sonus.html">Sonus</a></li>
             <li class="delay-6"><a href="aac.html">EMG-based AAC</a></li>
-            <li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+            <!--li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li-->
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
