--- a/reach.html
+++ b/reach.html
@@ -122,7 +122,7 @@
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
           <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors. The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize. The interactive table, built by researchers of the Technical University of München.</p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Reach 2020 is an European Consortium that aims to help elderly by focusing on stimulating healthy eating among seniors. The stakeholders of the projects requested my team to research a particular group of seniors in Eindhoven. These seniors participate in a weekly cooking activity at the Summa College. Further more, the stakeholders asked my team to develop a digital prototype for a smart table that would aid seniors to cook and socialize.<!--The interactive table, built by researchers of the Technical University of München.--></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/lokaalplus.jpg" alt="Project Image"/></div>
@@ -136,13 +136,12 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">USER RESEARCH</h2>
-            <h3 class="os-animation">WHAT WE DID</h3>
+            <h2 style="line-height: 1.05em;">UNDERSTANDING USERS NEEDS AND PAINS</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          
+          <h3 class="os-animation">CONTEXTUAL TASK ANALYSIS, INTERVIEWS, GROUP SESSIONS, AFFINITY DIAGRAM</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
@@ -156,12 +155,12 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGN SPRINT</h2>
+            <h2 style="line-height: 1.05em;">DE KOOKTAFEL</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
+          <h3 class="os-animation">FROM IDEAS TO DIGITAL PROTOTYPE</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
@@ -169,6 +168,9 @@
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/ideation.jpg" alt="Project Image"/></div>
+            </div>
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
+              <div class="row"><img src="assets/images/reach/wireframe.jpg" alt="Project Image"/></div>
             </div>
           </div>
         </div>
@@ -179,18 +181,16 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">DE KOOKFAFEL</h2>
+            <h2 style="line-height: 1.05em;">USER TESTING</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
+          <h3 class="os-animation">EXPLORING "DE KOOKTAFEL"</h3>
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;"></p>
           <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/reach/wireframe.jpg" alt="Project Image"/></div>
-            </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
+            
+            <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/reach/usertest2.jpg" alt="Project Image"/></div>
             </div>
           </div>
